--- a/style.cfg
+++ b/style.cfg
@@ -19,7 +19,7 @@
 #
 
 # General Information about this style
-name = prosilver
+name = prosilverRed
 copyright = © phpBB Limited, 2007
 style_version = 3.1.2
 phpbb_version = 3.1.2
@@ -29,4 +29,4 @@ phpbb_version = 3.1.2
 
 # Parent style
 # Set value to empty or to this style's name if this style does not have a parent style
-parent = prosilver
+parent = prosilverRed
